Bio-Schema-Chado (0.05000)

  * Added DBICSL-generated POD

  * Turned off DBIC's cascade_delete and cascade_copy on all relations
    (thanks to Siddhartha Basu for troubleshooting).  Things break if
    these are on and you don't have every part of the schema installed.

 -- Robert Buels <rmb32@cornell.edu>  Fri, 01 Jan 2010 13:24:03 -0800

Bio-Schema-Chado (0.04300)

  * Corrected a rather dirty CPAN upload, Util.pod file was in the
    wrong place.

 -- Robert Buels <rmb32@cornell.edu>  Tue, 03 Nov 2009 12:21:12 -0800

Bio-Schema-Chado (0.04200)

  * removed Util.pm, replaced with Util.pod for documentation, moved
    the actual Util methods into a separate package inside Schema.pm.
    Thanks to Aure Bombarely.

 -- Robert Buels <rmb32@cornell.edu>  Tue, 03 Nov 2009 12:07:52 -0800

Bio-Schema-Chado (0.04100)

  * added missing dependency on BioPerl

 -- Robert Buels <rmb32@cornell.edu>  Fri, 30 Oct 2009 09:15:47 -0700

Bio-Schema-Chado (0.04000)

  * added new modules and relationships for the newly released
    cell_line module in Chado

 -- Robert Buels <rmb32@cornell.edu>  Mon, 31 Aug 2009 08:43:19 -0700

Bio-Schema-Chado (0.03100)

  * added $VERSION to Bio::Chado::Schema to support CPAN indexer,
    bumped version by several numbers to force CPAN reindexing

 -- Robert Buels <rmb32@cornell.edu>  Mon, 31 Aug 2009 08:43:19 -0700

Bio-Schema-Chado (0.022)

  * update to schema dumping script now finds many more inter-module
    relationships

  * added the new inter-module relationships found by the dumping
    script

 -- Robert Buels <rmb32@cornell.edu>  Sat, 29 Aug 2009 09:28:27 -0700

dbic-chado (0.01_03)

  * changed namespace to Bio::Chado instead of Chado

 -- Robert Buels <rmb32@cornell.edu>  Sun, 16 Aug 2009 16:26:39 -0700

dbic-chado (0.01_01)

  * Initial release.

 -- Robert Buels <rmb32@cornell.edu>  Sat, 15 Aug 2009 16:04:24 -0700