@@ -1,3 +1,9 @@
+Bio-Schema-Chado (0.05001)
+
+  * test count bugfix
+
+ -- Robert Buels <rmb32@cornell.edu>  Sun, 03 Jan 2010 12:28:10 -0800
+
 Bio-Schema-Chado (0.05000)
 
   * Added DBICSL-generated POD
